src/oracle/snapshots/gutter__oracle__replay__synthetic-resize-01.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 1329 ms
band: columns 12-107, rows from 5

size: 120x30 (primary screen)
cursor: row 16 col 12 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|            ┌──────────┬────────────┬────────┐
  6|            │ Language │ Greeting   │ Script │
  7|            ├──────────┼────────────┼────────┤
  8|            │ English  │ Hello      │ Latin  │
  9|            │ Japanese │ こんにちは │ Kana   │
 10|            │ Chinese  │ 你好       │ Hanzi  │
 11|            └──────────┴────────────┴────────┘
 12|            日本語 中文 한국어 😀 🚀 👍🏽 👨‍👩‍👧 🇿🇦
 13|            ..............................................................................................界
 14|            ...............................................................................................
 15|            界
 16|
 17|
 18|
 19|
 20|
 21|
 22|
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes: none
