src/oracle/snapshots/gutter__oracle__replay__synthetic-resize-04.snap
---
source: src/oracle/replay.rs
expression: shown
---
quiet from 5259 ms
band: columns 12-107, rows from 5
rules not checked: none

size: 120x30 (primary screen)
cursor: row 23 col 12 (Visible)

scrollback: 0 lines

screen:
  0|$ history 00
  1|$ history 01
  2|$ history 02
  3|$ history 03
  4|$ history 04
  5|            ┌──────────┬────────────┬────────┐
  6|            │ Language │ Greeting   │ Script │
  7|            ├──────────┼────────────┼────────┤
  8|            │ English  │ Hello      │ Latin  │
  9|            │ Japanese │ こんにちは │ Kana   │
 10|            │ Chinese  │ 你好       │ Hanzi  │
 11|            └──────────┴────────────┴────────┘
 12|            日本語 中文 한국어 😀 🚀 👍🏽 👨‍👩‍👧 🇿🇦
 13|            ..............................................................................................界
 14|            ...............................................................................................
 15|            界
 16|            bold dim italic underline inverse strike
 17|            red green bg orange 256 truecolour bold italic underline magenta
 18|            first link and https://example.com/a/very/long/path/that/keeps/going/and/going/until/it/has/to/w
 19|            rap/across/the/band/edge
 20|            long: word01 word02 word03 word04 word05 word06 word07 word08 word09 word10 word11 word12 word13
 21|             word14 word15 word16 word17 word18 word19 word20 word21 word22 word23 word24 word25 word26 word
 22|            27 word28 word29 word30
 23|
 24|
 25|
 26|
 27|
 28|
 29|

hyperlinks: none

attributes:
 16| 12-15 bold; 17-19 dim; 21-26 italic; 28-36 underline; 38-44 inverse
 17| 12-14 fg=1; 16-23 bg=2; 25-34 fg=208; 36-45 fg=#6496c8; 47-75 fg=5 bold italic underline
