src/oracle/snapshots/gutter__oracle__replay__synthetic-resize-broken-rules.snap
---
source: src/oracle/replay.rs
expression: "broken.join(\"\\n\")"
---
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 25 (screen row 12 col 37): the child's grid holds "👍", the terminal shows "👍🏽"
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 27 (screen row 12 col 39): the child's grid holds "🏽", the terminal shows ""
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 28 (screen row 12 col 40): the child's grid holds "", the terminal shows "👨\u{200d}👩\u{200d}👧"
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 30 (screen row 12 col 42): the child's grid holds "👨\u{200d}", the terminal shows ""
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 31 (screen row 12 col 43): the child's grid holds "", the terminal shows "🇿🇦"
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 32 (screen row 12 col 44): the child's grid holds "👩\u{200d}", the terminal shows ""
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 34 (screen row 12 col 46): the child's grid holds "👧", the terminal shows ""
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 37 (screen row 12 col 49): the child's grid holds "🇿", the terminal shows ""
synthetic-resize-01 (quiet from 1329 ms): band row 7 col 38 (screen row 12 col 50): the child's grid holds "🇦", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 25 (screen row 12 col 37): the child's grid holds "👍", the terminal shows "👍🏽"
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 27 (screen row 12 col 39): the child's grid holds "🏽", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 28 (screen row 12 col 40): the child's grid holds "", the terminal shows "👨\u{200d}👩\u{200d}👧"
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 30 (screen row 12 col 42): the child's grid holds "👨\u{200d}", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 31 (screen row 12 col 43): the child's grid holds "", the terminal shows "🇿🇦"
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 32 (screen row 12 col 44): the child's grid holds "👩\u{200d}", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 34 (screen row 12 col 46): the child's grid holds "👧", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 37 (screen row 12 col 49): the child's grid holds "🇿", the terminal shows ""
synthetic-resize-02 (quiet from 2633 ms): band row 7 col 38 (screen row 12 col 50): the child's grid holds "🇦", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 25 (screen row 12 col 37): the child's grid holds "👍", the terminal shows "👍🏽"
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 27 (screen row 12 col 39): the child's grid holds "🏽", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 28 (screen row 12 col 40): the child's grid holds "", the terminal shows "👨\u{200d}👩\u{200d}👧"
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 30 (screen row 12 col 42): the child's grid holds "👨\u{200d}", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 31 (screen row 12 col 43): the child's grid holds "", the terminal shows "🇿🇦"
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 32 (screen row 12 col 44): the child's grid holds "👩\u{200d}", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 34 (screen row 12 col 46): the child's grid holds "👧", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 37 (screen row 12 col 49): the child's grid holds "🇿", the terminal shows ""
synthetic-resize-03 (quiet from 3941 ms): band row 7 col 38 (screen row 12 col 50): the child's grid holds "🇦", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 25 (screen row 12 col 37): the child's grid holds "👍", the terminal shows "👍🏽"
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 27 (screen row 12 col 39): the child's grid holds "🏽", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 28 (screen row 12 col 40): the child's grid holds "", the terminal shows "👨\u{200d}👩\u{200d}👧"
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 30 (screen row 12 col 42): the child's grid holds "👨\u{200d}", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 31 (screen row 12 col 43): the child's grid holds "", the terminal shows "🇿🇦"
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 32 (screen row 12 col 44): the child's grid holds "👩\u{200d}", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 34 (screen row 12 col 46): the child's grid holds "👧", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 37 (screen row 12 col 49): the child's grid holds "🇿", the terminal shows ""
synthetic-resize-04 (quiet from 5259 ms): band row 7 col 38 (screen row 12 col 50): the child's grid holds "🇦", the terminal shows ""
